{
    "name": "InputManager",
    "maps": [
        {
            "name": "Player",
            "id": "622eab9c-f00f-40ab-b0e8-71a5626e4646",
            "actions": [
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "ce9a6377-eeae-4918-bef5-148873c5a062",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillOne",
                    "type": "Button",
                    "id": "0282b433-53e5-4276-a4e7-31b14ee0ce60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillTwo",
                    "type": "Button",
                    "id": "43f5c774-89e1-4475-8797-10e83389415e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "16d5bbc7-ab91-47ed-be4c-ba97f18a10d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenBag",
                    "type": "Button",
                    "id": "e1bf2ea7-b89a-41b7-b751-fa4b95ff811c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Setting",
                    "type": "Button",
                    "id": "d735e2d9-6735-4d92-93a5-796283e8ba46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dfe7cb19-5f1f-48e4-849c-ca063adeef9e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "538e2b66-aeeb-4d14-b7ab-7baa67d39034",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b76844a7-7b72-4c8c-92a4-549c839d0e0e",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4ec81bd-edd1-441f-b6d2-f3c2419c3fbb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "834b7d33-6909-4a43-96ff-a752ad9f95b5",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenBag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4a266b7-1ced-4cc3-b365-083c9ae49ea5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Setting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}